# firebudget

./: .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  create_tables.sql
backend/.sqlx/: query-112bf8a321bd69129a8b19d9ea6bcbf824d369073386c9fa4b15411d6a74020c.json  query-45574e2c32350e0c7336d4ffd1277d0b87e509fbce8c530fc884c7d35fde33f4.json  query-484f5ce9324f7620232dc55f941cd7df89bae188ab2b9f6b46629a3c9788d57c.json  query-49f87460a24f86f9e147f96a9aa3634051a035c3952b34cbe2185de19fcb3b44.json  query-78466d0e24712c0a659b785562722d17a08eaac887edf58769c407d095219d2b.json  query-7e4f0945b88aa5d5549d7a89911fcf0e7f423d7eb3575f7a10acec33b54b4e79.json  query-8560fd313426a1daec6b135e9f8657dfe7405f77a564cd716c7056efa60929b1.json  query-94af83e07f23ca899f2143bf6b2403a3ddf5abe3590e5d6b05035e6f25887047.json  query-97fe4366e0c26d57441e6764f3b18618dcdc5b94f6b3262056f85df8e7c20b50.json  query-9cb07d500143193d5fe7181096681cd2733ee6c2c194251ac0a9fd0488c99185.json  query-a0632c6a101aa7b4871eb1e2351bfbc974ee143a8736e5a7aebb75ca5d4d4d46.json  query-af02fcccd4493a0dedfb7f150b1e4277259a0bfa244e8fac8646ff8bbb573dab.json  query-b10e32415b92fb581d143751e32ea993a3cceadf1932b20dbfdba8793fb0db30.json  query-db48ddaf647fd1d2d4478101b3b9ff25fabffcd725c9f8f9d5484cf7b1e84c49.json
backend/src/: config.rs  main.rs  scheduler.rs
backend/src/belvo/: client.rs  models.rs
backend/src/models/: balance.rs  mod.rs  transaction.rs  user.rs
backend/src/pluggy/: client.rs  models.rs
backend/src/routes/: accounts.rs  auth.rs  items.rs  mod.rs  transactions.rs  webhooks.rs
frontend/: .dockerignore  (+5 more)
(+18 files in other folders)
